// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SellOfferSummary renders correctly 1`] = `
<View
  style={
    [
      {
        "gap": 16,
      },
      {
        "gap": 48,
      },
      undefined,
    ]
  }
>
  <View>
    <AmountSummary
      amount={250000}
    />
    <PremiumText
      premium={1.5}
      style={
        {
          "color": "#7D675E",
          "fontFamily": "Baloo2-Regular",
          "fontSize": 20,
          "letterSpacing": 0.2,
          "lineHeight": 28,
        }
      }
    />
  </View>
  <PaymentMethodsSummary
    meansOfPayment={
      {
        "EUR": [
          "sepa",
        ],
      }
    }
  />
  <PayoutWalletSummary
    offer={
      {
        "amount": 250000,
        "creationDate": 2022-03-08T11:41:07.245Z,
        "doubleMatched": false,
        "funding": {
          "amounts": [],
          "expiry": 537,
          "status": "NULL",
          "txIds": [],
          "vouts": [],
        },
        "id": "38",
        "matched": [],
        "matches": [],
        "meansOfPayment": {
          "EUR": [
            "sepa",
          ],
        },
        "online": true,
        "originalPaymentData": [],
        "paymentData": {
          "sepa": {
            "hash": "TODO add payment hash",
          },
        },
        "premium": 1.5,
        "publishingDate": 2022-03-08T11:41:07.245Z,
        "refunded": false,
        "released": false,
        "returnAddress": "bcrt1q70z7vw93cxs6jx7nav9cmcn5qvlv362qfudnqmz9fnk2hjvz5nus4c0fuh",
        "seenMatches": [],
        "type": "ask",
      }
    }
  />
</View>
`;

exports[`SellOfferSummary renders correctly for sell offers drafts 1`] = `
<View
  style={
    [
      {
        "gap": 16,
      },
      {
        "gap": 48,
      },
      undefined,
    ]
  }
>
  <View>
    <AmountSummary
      amount={1000000}
    />
    <PremiumText
      premium={1.5}
      style={
        {
          "color": "#7D675E",
          "fontFamily": "Baloo2-Regular",
          "fontSize": 20,
          "letterSpacing": 0.2,
          "lineHeight": 28,
        }
      }
    />
  </View>
  <PaymentMethodsSummary
    meansOfPayment={
      {
        "EUR": [
          "sepa",
        ],
      }
    }
  />
  <PayoutWalletSummary
    offer={
      {
        "amount": 1000000,
        "creationDate": 2023-04-26T14:58:49.437Z,
        "funding": {
          "amounts": [],
          "expiry": 4320,
          "status": "NULL",
          "txIds": [],
          "vouts": [],
        },
        "meansOfPayment": {
          "EUR": [
            "sepa",
          ],
        },
        "originalPaymentData": [],
        "paymentData": {
          "sepa": {
            "hash": "TODO add payment hash",
          },
        },
        "premium": 1.5,
        "returnAddress": "returnAddress",
        "type": "ask",
      }
    }
  />
</View>
`;
